kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: kiali-ingress
  namespace: istio-system
spec:
  rules:
  - host: kiali.bohati.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: kiali
            port: 
              number: 20001
